Included contents needed in the report, as presentet by Solveig

--- a/SSB Report.Rmd
+++ b/SSB Report.Rmd
@@ -13,3 +13,14 @@ Isssv1337 Political Science Hackathon - Group 1
 
 
 ### Quality Report on "About the Statistic"
+(10-20 pages)
+
+
+Contents:
+
+Introduction
+Brainstorming
+Data collection
+Data description
+Findings
+Limitations and steps forward
